force-app/main/default/objects/ssot__ResearchStudyCandidate__dlm/fields/ssot__CandidateId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CandidateId__c</fullName>
    <label>Candidate</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CandidateId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>