force-app/main/default/objects/ssot__ResearchStudyCandidate__dlm/fields/ssot__CareProgramSiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramSiteId__c</fullName>
    <label>CareProgramSite</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramSiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>