force-app/main/default/objects/ssot__ResearchStudyCandidate__dlm/fields/ssot__rel_1716723730956_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723730956_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudyCandidate_CareProgramSi_rel</label>
    <referenceTo>ssot__CareProgramSite__dlm</referenceTo>
    <relationshipLabel>ResearchStudyCandidate_CareProgramSi_rel</relationshipLabel>
    <relationshipName>rel_1716723730956_end</relationshipName>
    <type>Lookup</type>
</CustomField>