force-app/main/default/objects/ssot__ResearchStudyCandidate__dlm/fields/ssot__rel_1716723736005_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723736005_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudyCandidate_ResearchStudy_rel</label>
    <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
    <relationshipLabel>ResearchStudyCandidate_ResearchStudy_rel</relationshipLabel>
    <relationshipName>rel_1716723736005_end</relationshipName>
    <type>Lookup</type>
</CustomField>